addition to my module2 assignment

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-not me
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<title>Ezekiel | module2 solution</title>
+	</head>
+
+	<body>
+		<h1>My Life's Story</h1>
+		<div class="main">
+			<div class="contentl contentm1 contents1">
+				<div class="paddinglove">
+					<div class="content backgroundlove">
+						<div class="title love">Love</div>
+						<div class="p">I have been sad. I know the way of sorrow. My weaknesses made me welcome emptiness, for I felt I could not go beyound here. Not until I had a different feeling, one that is not about me. It changed me. It is changing me. Now I can go from here, I can love, for I am loved.</div>
+					</div>
+				</div>
+			</div>
+			<div class="contentl contentm2 contents2">
+				<div class="paddinglearning">
+					<div class="content backgroundlearning">
+						<div class="learning title">Learning</div>
+						<div class="p">What a blessing it is to learn. I walked the crooked path that was laid for me. I had no choice, for I do not know any better, but nevertheless I am glad. Through the thick and thin, the hurt and pain, the shear force of life was all around me and I had no option but to learn.</div>
+					</div>
+				</div>
+			</div>
+			<div class="contentl contentm3 contents3">
+				<div class="paddinghope">
+					<div class="content backgroundhope">
+						<div class="title hope">Hope</div>
+						<div class="p">Oh! That I may never loose hope. The dreams I have, the visions I see; how could I loose hope? These beautiful things, that eye have not seen, nor was it mentioned by any mouth, I long for the day that they would come. O, I believe. </div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
+
+</html>
